# nmmanager

./: .gitignore  CMakeLists.txt  Readme.rst  connectionproxymodel.cpp  connectionproxymodel.h  main.cpp  main.qml  main.qrc  networkitemslist.cpp  networkitemslist.h  networkmodel.cpp  networkmodel.h  networkmodelitem.cpp  networkmodelitem.h  nmmanager.cpp  nmmanager.h
qml/: AddConnectionPage.qml  ConnectionsPage.qml  EditingEthernetPage.qml  ListDelegate.qml  NetworkConnectionsPage.qml
